
wxMac:

- Better IconRef support (Alan Shouls)
- Fix duplicate (empty) help menu in non-English programs (Andreas Jacobs)
- Allow accelerators to be used with buttons too (Ryan Wilcox)
- Support resource forks in wxCopyFile() (Hank Schultz)

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications.
- Return the restored window size from GetSize() when window is minimized.

wxX11:

- Added mouse wheel support (David Hart)
- Make Enter key activate the default button (David Hart)


2.8.4
-----

All (Unix):

- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse)

wxMSW:

- Corrected wxStaticBox label appearance when its foreground colour was set:
  it didn't respect font size nor background colour then (Juan Antonio Ortega)
- Don't lose combobox text when it's opened and closed (Kolya Kosenko)
- Corrected GetChecked() for events from checkable menu items (smanders)
- Fixed popup menus under Windows NT 4
- Fixed bug in wxThread::Wait() in console applications introduced in 2.8.3
- Support right-aligned/centered owner drawn items in wxListCtrl (troelsk)
- Compilation fixed with WXWIN_COMPATIBILITY_2_6==0

wxGTK:

- Fix infinite loop when adding a wxStaticText control to a toolbar
- Fix wxNO_BORDER style for wxRadioBox (David Hart)
- Fix wxTextCtrl::GetLineText() for empty lines (Marcin Wojdyr)

wxUniv:

- Fix wxTextCtrl::SetSelection(-1, -1) to behave as documented (Anders Larsen)
- Fix setting background colour for controls with transparent background


2.8.3
-----

All:

- Shut down the sockets gracefully (Sergio Aguayo)
- Fix extra indentation in wxHTML_ALIGN_JUSTIFY display (Chacal)

wxMac:

- Corrected top border size for wxStaticBox with empty label (nusi)

wxMSW:

- Fixed wxFileName::GetSize() for large files

wxGTK:

- Fixed handling of accelerators using PageUp/Down keys


2.8.2
-----

All:

- Added wxSizerFlags::Shaped() and FixedMinSize() methods.
- Added wxCSConv::IsOk() (Manuel Martin).
- Added wxDateTime::GetDateOnly().